// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IndividualsData mock query for getIndividuals 1`] = `
<individuals-grid-stub
  class="grid"
  individuals="[object Object]"
/>
`;

exports[`IndividualsTable Mock query for getCountries 1`] = `
<section
  class=""
>
  <v-row-stub
    class="header justify-space-between"
    dense="false"
    nogutters="false"
    tag="div"
  />
  <v-row-stub
    class="actions"
    dense="false"
    nogutters="false"
    tag="div"
  />
  <v-data-table-server-stub
    color="primary"
    density="default"
    disablesort="false"
    expanded=""
    expandonclick="false"
    firsticon="$first"
    firstpagelabel="$vuetify.dataFooter.firstPage"
    fixedfooter="false"
    fixedheader="false"
    groupby=""
    headers="[object Object],[object Object],[object Object],[object Object]"
    hidedefaultbody="false"
    hidedefaultfooter="false"
    hidedefaultheader="false"
    hidenodata="false"
    hover="true"
    items=""
    itemslength="0"
    itemsperpage="10"
    itemsperpageoptions="[object Object],[object Object],[object Object],[object Object],[object Object]"
    itemsperpagetext="$vuetify.dataFooter.itemsPerPageText"
    itemvalue="uuid"
    lasticon="$last"
    lastpagelabel="$vuetify.dataFooter.lastPage"
    loading="false"
    loadingtext="$vuetify.dataIterator.loadingText"
    mobile="false"
    modelvalue=""
    multisort="false"
    mustsort="false"
    nexticon="$next"
    nextpagelabel="$vuetify.dataFooter.nextPage"
    nodatatext="$vuetify.noDataText"
    page="0"
    pagetext="$vuetify.dataFooter.pageText"
    previcon="$prev"
    prevpagelabel="$vuetify.dataFooter.prevPage"
    returnobject="true"
    selectstrategy="page"
    showcurrentpage="false"
    showexpand="false"
    showselect="true"
    sortascicon="$sortAsc"
    sortby=""
    sortdescicon="$sortDesc"
    sticky="false"
    tag="div"
    valuecomparator="[Function]"
  />
  <v-dialog-stub
    absolute="false"
    activatorprops="[object Object]"
    attach="false"
    closeonback="true"
    closeoncontentclick="false"
    contained="false"
    disabled="false"
    eager="false"
    fullscreen="false"
    location="bottom"
    locationstrategy="static"
    maxwidth="500px"
    modelvalue="false"
    noclickanimation="false"
    openonhover="false"
    origin="center center"
    persistent="false"
    retainfocus="true"
    scrim="true"
    scrollable="false"
    scrollstrategy="block"
    transition="[object Object]"
    zindex="2400"
  />
  <profile-modal-stub
    addidentity="[Function]"
    addorganization="[Function]"
    enroll="[Function]"
    fetchorganizations="[Function]"
    getcountries="[Function]"
    isopen="false"
    updateprofile="[Function]"
  />
  <enroll-modal-stub
    addorganization="[Function]"
    enroll="[Function]"
    fetchorganizations="[Function]"
    isopen="false"
    text=""
    title=""
  />
  <!--v-if-->
  <!--v-if-->
  <v-card-stub
    border="false"
    class="dragged-item pa-2"
    color="primary"
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  />
</section>
`;

exports[`IndividualsTable Mock query for getPaginatedIndividuals 1`] = `
<section
  class=""
>
  <v-row-stub
    class="header justify-space-between"
    dense="false"
    nogutters="false"
    tag="div"
  />
  <v-row-stub
    class="actions"
    dense="false"
    nogutters="false"
    tag="div"
  />
  <v-data-table-server-stub
    color="primary"
    density="default"
    disablesort="false"
    expanded=""
    expandonclick="false"
    firsticon="$first"
    firstpagelabel="$vuetify.dataFooter.firstPage"
    fixedfooter="false"
    fixedheader="false"
    groupby=""
    headers="[object Object],[object Object],[object Object],[object Object]"
    hidedefaultbody="false"
    hidedefaultfooter="false"
    hidedefaultheader="false"
    hidenodata="false"
    hover="true"
    items=""
    itemslength="0"
    itemsperpage="10"
    itemsperpageoptions="[object Object],[object Object],[object Object],[object Object],[object Object]"
    itemsperpagetext="$vuetify.dataFooter.itemsPerPageText"
    itemvalue="uuid"
    lasticon="$last"
    lastpagelabel="$vuetify.dataFooter.lastPage"
    loading="false"
    loadingtext="$vuetify.dataIterator.loadingText"
    mobile="false"
    modelvalue=""
    multisort="false"
    mustsort="false"
    nexticon="$next"
    nextpagelabel="$vuetify.dataFooter.nextPage"
    nodatatext="$vuetify.noDataText"
    page="0"
    pagetext="$vuetify.dataFooter.pageText"
    previcon="$prev"
    prevpagelabel="$vuetify.dataFooter.prevPage"
    returnobject="true"
    selectstrategy="page"
    showcurrentpage="false"
    showexpand="false"
    showselect="true"
    sortascicon="$sortAsc"
    sortby=""
    sortdescicon="$sortDesc"
    sticky="false"
    tag="div"
    valuecomparator="[Function]"
  />
  <v-dialog-stub
    absolute="false"
    activatorprops="[object Object]"
    attach="false"
    closeonback="true"
    closeoncontentclick="false"
    contained="false"
    disabled="false"
    eager="false"
    fullscreen="false"
    location="bottom"
    locationstrategy="static"
    maxwidth="500px"
    modelvalue="false"
    noclickanimation="false"
    openonhover="false"
    origin="center center"
    persistent="false"
    retainfocus="true"
    scrim="true"
    scrollable="false"
    scrollstrategy="block"
    transition="[object Object]"
    zindex="2400"
  />
  <profile-modal-stub
    addidentity="[Function]"
    addorganization="[Function]"
    enroll="[Function]"
    fetchorganizations="[Function]"
    getcountries="[Function]"
    isopen="false"
    updateprofile="[Function]"
  />
  <enroll-modal-stub
    addorganization="[Function]"
    enroll="[Function]"
    fetchorganizations="[Function]"
    isopen="false"
    text=""
    title=""
  />
  <!--v-if-->
  <!--v-if-->
  <v-card-stub
    border="false"
    class="dragged-item pa-2"
    color="primary"
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  />
</section>
`;

exports[`JobsTable Mock query for getJobs 1`] = `
<v-container-stub
  class="jobs section mb-5 pa-0"
  fluid="false"
  tag="div"
/>
`;

exports[`OrganizationsTable Mock query for getPaginatedOrganizations 1`] = `
<section
  class="section"
>
  <v-row-stub
    class="header"
    dense="false"
    nogutters="false"
    tag="div"
  />
  <v-row-stub
    class="actions"
    dense="false"
    nogutters="false"
    tag="div"
  />
  <v-data-table-server-stub
    density="default"
    disablesort="false"
    expanded=""
    expandonclick="false"
    firsticon="$first"
    firstpagelabel="$vuetify.dataFooter.firstPage"
    fixedfooter="false"
    fixedheader="false"
    groupby=""
    headers="[object Object],[object Object],[object Object]"
    hidedefaultbody="false"
    hidedefaultfooter="false"
    hidedefaultheader="false"
    hidenodata="false"
    hover="true"
    item-key="id"
    items="[object Object],[object Object]"
    itemslength="2"
    itemsperpage="10"
    itemsperpageoptions="[object Object],[object Object],[object Object],[object Object],[object Object]"
    itemsperpagetext="$vuetify.dataFooter.itemsPerPageText"
    itemvalue="name"
    lasticon="$last"
    lastpagelabel="$vuetify.dataFooter.lastPage"
    loading="false"
    loadingtext="$vuetify.dataIterator.loadingText"
    mobile="false"
    modelvalue=""
    multisort="false"
    mustsort="false"
    nexticon="$next"
    nextpagelabel="$vuetify.dataFooter.nextPage"
    nodatatext="$vuetify.noDataText"
    page="1"
    pagetext="$vuetify.dataFooter.pageText"
    previcon="$prev"
    prevpagelabel="$vuetify.dataFooter.prevPage"
    returnobject="true"
    selectstrategy="page"
    showcurrentpage="false"
    showexpand="false"
    showselect="false"
    sortascicon="$sortAsc"
    sortby=""
    sortdescicon="$sortDesc"
    sticky="false"
    tag="div"
    valuecomparator="[Function]"
  />
  <organization-modal-stub
    addalias="[Function]"
    adddomain="[Function]"
    addorganization="[Function]"
    aliases=""
    deletealias="[Function]"
    deletedomain="[Function]"
    domains=""
    isopen="false"
  />
  <v-dialog-stub
    absolute="false"
    activatorprops="[object Object]"
    attach="false"
    closeonback="true"
    closeoncontentclick="false"
    contained="false"
    disabled="false"
    eager="false"
    fullscreen="false"
    location="bottom"
    locationstrategy="static"
    maxwidth="500px"
    modelvalue="false"
    noclickanimation="false"
    openonhover="false"
    origin="center center"
    persistent="false"
    retainfocus="true"
    scrim="true"
    scrollable="false"
    scrollstrategy="block"
    transition="[object Object]"
    zindex="2400"
  />
</section>
`;
